# dev_greenova

./: .bandit  .banditignore  .banditrc  .deadrc  .djlint  .editorconfig  .env  .env.example  .env.me  .env.vault  .envrc  .eslintrc  .eslintrc.cjs  .gitattributes  .gitignore  .gitignore.project  .gitignore_global  .gitmessage  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.json  .npmrc  .nvmrc  .pre-commit-config.yaml  .prettierrc  .pylintrc  .pylintrc-django  .pyrightconfig.json  .shellcheckrc  ACKNOWLEDGEMENTS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  clean_output_with_nulls.csv  (+23 more)
.config/systemd/: greenova.service  prod.txt
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  entrypoint.sh  package.json  post-create.sh  post_start.sh  requirements.txt
.devskim/: config.json
.github/: .copilot-codeGeneration-instructions.md  .copilot-commit-message-instructions.md  .copilot-pull-request-description-instructions.md  .copilot-review-instructions.md  .copilot-test-instructions.md  copilot-instructions.md  dependabot.yml
.github/instructions/: .copilot-codeGeneration-instructions.md  .copilot-commit-message-instructions.md  .copilot-pull-request-description-instructions.md  .copilot-review-instructions.md  .copilot-test-instructions.md
.github/prompts/: bug-report.prompt.md  business-scope.prompt.md  changelog-generator.prompt.md  code-review.prompt.md  code-style.prompt.md  configuration.prompt.md  devcontainer-config.prompt.md  devcontainer-fix.prompt.md  github-issue.prompt.md  gpt-4-1.prompt.md  gpt-4o.prompt.md  merge-strategy.prompt.md  o4-mini.prompt.md  pre-commit-fix.prompt.md  prompt-generation-script.txt  prompt-generation.prompt.md  semantic-version.prompt.md  technical-writing.prompt.md  test-standards.prompt.md  tool-configuration.prompt.md
.github/workflows/: codeql.yml  dependency-review.yml  dotenv-vault.yml  pylint.yml  super-linter.yml  tasks.json
core/: apps.py
core/templatetags/: custom_tags.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  INSTALL.md  REQUIREMENTS_WORKFLOW.md  ROADMAP.md  SCHEMA.md  TESTING.md  TODO.md  TUTORIALS.md  USAGE.md  chatdata.md  style_guide.md
docs/git/: git-repository-management.md
docs/learning/: docker.md  docker_test_activity.md  makefile.md  makefile_test_activity.md
docs/project/: automating_build_environement.md  container_environment.md  data_visualistion.md  front_end_interactivity.md  ui_design_and_styling.md
docs/resources/: building.md  docker.md  dotenv.md  editorconfig.md  fish.md  github-cli.md  htmx.md  hyperscript.md  keep-a-changelog.md  makefile.md  pico.md  protobuf.md  tailwind.md
docs/templates/: bug-report-template.md  business-scope-template.md  code-review-feedback.md  commit-message-template.md  github-issue-template.md  pull-request-template.md  squash.txt
greenova/: None  README.rst  __init__.py  asgi.py  clean_output_with_nulls.csv  dirty.csv  dummy_data.csv  manage.py  mypy.ini  settings.py  urls.py  wsgi.py
greenova.bak/audit/: admin.py  audit.html  middleware.py  models.py  views.py
greenova.bak/obligations/: admin.py  apps.py  forms.py  models.py  views.py
greenova.bak/users/: admin.py  forms.py  models.py  views.py
greenova/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
greenova/auditing/: admin.py  models.py  test_auditing.py
greenova/authentication/: __init__.py  apps.py  forms.py  middleware.py  test_authentication.py  urls.py  views.py
greenova/chatbot/: _pb2.py  chatbot_pb2.py  chatdata_pb2.py  compile_proto.py  create_input.py  forms.py  models.py  proto_utils.py  services.py  test_chatbot.py  urls.py  views.py
greenova/company/: __init__.py  admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  models.pyi  test_company.py  urls.py  views.py  views.pyi
greenova/core/: __init__.py  admin.py  apps.py  commons.py  commons.pyi  constants.py  constants.pyi  forms.py  jinja2.py  middleware.py  mixins.py  mixins.pyi  models.py  proto_utils.py  signals.py  signals.pyi  test_core.py  types.py  types.pyi  urls.py  views.py
greenova/dashboard/: admin.py  apps.py  figures.py  forms.py  middleware.py  mixins.py  models.py  signals.py  test_dashboard.py  urls.py  views.py
greenova/feedback/: admin.py  forms.py  forms.pyi  models.py  models.pyi  proto_utils.py  test_feedback.py  urls.py  views.py  views.pyi
greenova/greenova/: asgi.py  context_processors.py  forms.py  middleware.py  settings.py  test_greenova.py  urls.py  views.py  wsgi.py
greenova/landing/: apps.py  models.py  signals.py  test_landing.py  urls.py  views.py
greenova/mechanisms/: admin.py  (+9 more)
notebooks/: pie_chart_gallery.ipynb
requirements/: DELETION_NOTICE.txt  DEPRECATED_FILES.txt  INSTALL.txt  LEGACY_FILES_REMOVAL_PLAN.txt  README.rst  README_LEGACY.txt  README_MIGRATION.txt  base.in  base.txt  constraints.txt  dev.in  dev.txt  prod.in  prod.txt  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt
scripts/: add_company_id.sql  build-assemblyscript.js  build-postcss-debug.js  build-postcss.js  build-typescript.js  check_constraints_versions.sh  consolidated_repository_management.fish  copy-gsap-files.js  copy-gsap.sh  dead_code_resolver.fish  find_and_list_files.fish  find_and_list_files_by_name.fish  find_real_dead_code.py  fix_hyperscript.py  fix_hyperscript_dump.py  git_maintenance.fish  github_issue.fish  handle_dead_code.py  post_merge_analysis_origin_and_upstream.fish  pre_merge.fish  pre_merge_analysis_origin_and_upstream.fish  rebuild.sh  upgrade_npm_and_pip.sh
tests/: test_pre_merge.py
(+594 files in other folders)
