[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "E302", "E305"]
in-place = true
recursive = true
aggressive = 3
single_quotes = true

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 88
use_gitignore = true
format_css = false
format_js = false
ignore = "H014,H015,T002"
include = "**/*.html,**/*.jinja,**/*.djhtml"
extension = "django-html,html,jinja"
preserve_blank_lines = true
preserve_leading_space = true
require_pragma = false
