[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Dependency management is handled via pip-tools and requirements/*.in files.
# See requirements/README.rst and docs/REQUIREMENTS_WORKFLOW.md for workflow.
# Do not add dependencies here; use requirements/requirements.in and pip-compile.

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "E302", "E305"]
in-place = true
recursive = true
aggressive = 3
single_quotes = true

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 88
use_gitignore = true
format_css = false
format_js = false
ignore = "H014,H015,T002"
include = "**/*.html,**/*.jinja,**/*.djhtml"
exclude = "**/node_modules/**,**/bower_components/**,**/vendors/**,**/static/**,**/media/**,**/migrations/**,**/__pycache__/**,**/.git/**,**/.venv/**,**/.env/**,**/.pytest_cache/**,**/.mypy_cache/**,**/build/**,**/dist/**,**/.eggs/**,**/docs/conf.py/**,**/requirements/**"
extension = "django-html,html,jinja"
preserve_blank_lines = true
preserve_leading_space = true
require_pragma = false

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
exclude = ['^migrations/.*\.py$', '^tests/.*\.py$']
mypy_path = "greenova/stubs"
explicit_package_bases = true
namespace_packages = true
strict = true
packages = ["greenova"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "greenova.greenova.settings"

[tool.bandit]
context_lines = 3
exclude = [
    "/tests",
    "/env",
    "/venv",
    "/.git",
    "*.pyc",
    "**/test_*.py",
    "**/*_test.py",
    "**/mock_*.py",
]
skips = ["B311"]
hardcoded_password_string = ["password", "passwd", "pwd", "secret"]
severity = "LOW"
confidence = "LOW"
format = "txt"
output = "bandit-results.txt"
processes = 4
exit_zero = false
recursive = true
verbose = true
exclude_dirs = ["tests", "migrations", "docs"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true
extend-exclude = [
    "migrations",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".venv",
    "node_modules",
    "docs/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "D",   # pydocstyle
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PLC", # pylint
    "PLE", # pylint
    "PLR", # pylint
    "PLW", # pylint
    "RUF", # Ruff-specific rules
]
ignore = ["E501", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["S101", "S105", "S106", "S107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
