[metadata]
name = greenova
version = 1.0.0
description = Environmental Compliance Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Adrian Gallo
author_email = agallo@enveng-group.com.au
license = AGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = ==3.13.1
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[unittest]
test-suite = tests
test-pattern = test_*.py
verbosity = 2
